name:                the-witness-puzzle-solver
version:             0.1.0.0
synopsis:            WIP Puzzle Solver for the Witness (Tetris puzzles hurt me)
description:         Please see README.md
homepage:            https://github.com/montanonic/the-witness-puzzle-solver#readme
license:             GPL-3
license-file:        LICENSE.md
author:              Nicholas Montaño
maintainer:          montanonic@gmail.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable puzzle-solver
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
  ghc-options:         -Wall
